fixed titles which were too big for mobile

--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -48,14 +48,17 @@
     flex-direction: column-reverse;
     padding: 0 35px;
     margin-top: 70px;
-    font-size: 24px;
     text-align: center;
 
+    &__title {
+      font-size: 24px;
+    }
+    
     &__right {
       margin-top: 0;
       width: initial;
     }
-    
+
     &__left {
       margin: 16px 0 16px 0;
       width: 100%;
